--- a/countries/index.html
+++ b/countries/index.html
@@ -15,7 +15,7 @@
 						которая административно состоит из 50 штатов
 						и федерального округа Колумбия, а также
 						административно контролирует ряд островных территорий.</p>
-						<a href="countries/usa.html" class="btn">Подробнее</a>
+						<a href="usa.html" class="btn">Подробнее</a>
 				</div>
 			</div>
 		</div>
@@ -30,7 +30,7 @@
 						границах с территорией Крыма, аннексия которого не получила международного признания,
 						составляет 17 125 191[6] км². Население страны в тех же границах составляет 146 424 729[10] чел.
 						(2023; 9-е место в мире).</p>
-						<a href="countries/usa.html" class="btn">Подробнее</a>
+						<a href="russia.html" class="btn">Подробнее</a>
 				</div>
 			</div>
 		</div>
@@ -46,7 +46,7 @@
 						море и придирчивы к выбору развлечений — вам сюда. В Эмиратах находятся самый большой
 						в мире аквариум, горнолыжный комплекс в пустыне, изумительной красоты мечети и, конечно же, 
 						множество торговых центров с тысячами магазинов.</p>
-						<a href="countries/usa.html" class="btn">Подробнее</a>
+						<a href="oae.html" class="btn">Подробнее</a>
 				</div>
 			</div>
 		</div>
