--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 					<div>
 						<h1>Путешествие в мечту</h1>
 						<p>Этот сайт мечтателей, которые хотят побывать там, где еще не были.</p>
-						<a href="countries/usa.html" class="btn">(продолжить)</a>
+						<a href="countries/index.html" class="btn">(продолжить)</a>
 				</div>
 			</div>
 		</div>
